[gd_scene load_steps=3 format=2]

[ext_resource path="res://SongManager/templates/SongManagers/standard_song_manager.gd" type="Script" id=1]
[ext_resource path="res://Example/Example.gd" type="Script" id=2]

[node name="Example" type="Node2D"]
script = ExtResource( 2 )

[node name="StandardSongManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Menu"]
anchor_left = 0.0629959
anchor_top = -0.0629959
anchor_right = 0.0629959
anchor_bottom = -0.0629959
margin_left = -512.794
margin_top = -300.0
margin_right = 511.206
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplit" type="VBoxContainer" parent="Menu/Center"]
margin_left = 219.0
margin_top = 252.0
margin_right = 804.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Songs" type="HBoxContainer" parent="Menu/Center/VSplit"]
margin_right = 585.0
margin_bottom = 48.0
custom_constants/separation = 10

[node name="Song1" type="VBoxContainer" parent="Menu/Center/VSplit/Songs"]
margin_right = 352.0
margin_bottom = 48.0

[node name="Song1Button" type="Button" parent="Menu/Center/VSplit/Songs/Song1"]
margin_right = 352.0
margin_bottom = 20.0
text = "Song1"

[node name="Checks" type="HBoxContainer" parent="Menu/Center/VSplit/Songs/Song1"]
margin_top = 24.0
margin_right = 352.0
margin_bottom = 48.0

[node name="Song1AC" type="CheckBox" parent="Menu/Center/VSplit/Songs/Song1/Checks"]
margin_right = 128.0
margin_bottom = 24.0
text = "ArpeggioChords"

[node name="Song1AB" type="CheckBox" parent="Menu/Center/VSplit/Songs/Song1/Checks"]
margin_left = 132.0
margin_right = 246.0
margin_bottom = 24.0
text = "ArpeggioBass"

[node name="Song1CB" type="CheckBox" parent="Menu/Center/VSplit/Songs/Song1/Checks"]
margin_left = 250.0
margin_right = 352.0
margin_bottom = 24.0
text = "ChordsBass"

[node name="VSeparator" type="VSeparator" parent="Menu/Center/VSplit/Songs"]
margin_left = 362.0
margin_right = 366.0
margin_bottom = 48.0

[node name="Song2" type="VBoxContainer" parent="Menu/Center/VSplit/Songs"]
margin_left = 376.0
margin_right = 585.0
margin_bottom = 48.0

[node name="Song2Button" type="Button" parent="Menu/Center/VSplit/Songs/Song2"]
margin_right = 209.0
margin_bottom = 20.0
text = "Song 2"

[node name="Checks" type="HBoxContainer" parent="Menu/Center/VSplit/Songs/Song2"]
margin_top = 24.0
margin_right = 209.0
margin_bottom = 48.0

[node name="Song2Chords" type="CheckBox" parent="Menu/Center/VSplit/Songs/Song2/Checks"]
margin_right = 72.0
margin_bottom = 24.0
text = "Chords"

[node name="Song2Bass" type="CheckBox" parent="Menu/Center/VSplit/Songs/Song2/Checks"]
margin_left = 76.0
margin_right = 134.0
margin_bottom = 24.0
text = "Bass"

[node name="Song2Drums" type="CheckBox" parent="Menu/Center/VSplit/Songs/Song2/Checks"]
margin_left = 138.0
margin_right = 209.0
margin_bottom = 24.0
text = "Drums"

[node name="VSeparator" type="HSeparator" parent="Menu/Center/VSplit"]
margin_top = 58.0
margin_right = 585.0
margin_bottom = 62.0

[node name="Transitions" type="VBoxContainer" parent="Menu/Center/VSplit"]
margin_top = 72.0
margin_right = 585.0
margin_bottom = 96.0
custom_constants/separation = 10

[node name="Transition" type="CenterContainer" parent="Menu/Center/VSplit/Transitions"]
margin_right = 585.0
margin_bottom = 24.0

[node name="Elements" type="HBoxContainer" parent="Menu/Center/VSplit/Transitions/Transition"]
margin_left = 130.0
margin_right = 454.0
margin_bottom = 24.0
custom_constants/separation = 10

[node name="TransitionType" type="OptionButton" parent="Menu/Center/VSplit/Transitions/Transition/Elements"]
margin_right = 127.0
margin_bottom = 24.0
text = "Filter transition"
items = [ "Filter transition", null, false, 0, false, "Volume transition", null, false, 0, false, "Instant transition", null, false, 0, false ]
selected = 0

[node name="Time" type="HBoxContainer" parent="Menu/Center/VSplit/Transitions/Transition/Elements"]
margin_left = 137.0
margin_right = 324.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Menu/Center/VSplit/Transitions/Transition/Elements/Time"]
margin_top = 5.0
margin_right = 109.0
margin_bottom = 19.0
text = "Transition time : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="SpinBox" parent="Menu/Center/VSplit/Transitions/Transition/Elements/Time"]
margin_left = 113.0
margin_right = 187.0
margin_bottom = 24.0

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="pressed" from="Menu/Center/VSplit/Songs/Song1/Song1Button" to="." method="_on_Song1Button_pressed"]
[connection signal="toggled" from="Menu/Center/VSplit/Songs/Song1/Checks/Song1AC" to="." method="_on_Song1AC_toggled"]
[connection signal="toggled" from="Menu/Center/VSplit/Songs/Song1/Checks/Song1AB" to="." method="_on_Song1AB_toggled"]
[connection signal="toggled" from="Menu/Center/VSplit/Songs/Song1/Checks/Song1CB" to="." method="_on_Song1CB_toggled"]
[connection signal="pressed" from="Menu/Center/VSplit/Songs/Song2/Song2Button" to="." method="_on_Song2Button_pressed"]
[connection signal="toggled" from="Menu/Center/VSplit/Songs/Song2/Checks/Song2Chords" to="." method="Song2Check"]
[connection signal="toggled" from="Menu/Center/VSplit/Songs/Song2/Checks/Song2Bass" to="." method="Song2Check"]
[connection signal="toggled" from="Menu/Center/VSplit/Songs/Song2/Checks/Song2Drums" to="." method="Song2Check"]
